--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,17 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
+}
+
+header nav ul a {
+	@apply transition;
+}
+
+header nav ul a:not(.active) {
+	@apply text-zinc-500 hover:text-zinc-800;
+}
+
+header nav ul > a.active {
+	@apply text-zinc-900;
 }
