--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,5 @@
 @import 'tailwindcss';
+@plugin "@tailwindcss/typography";
 
 body {
 	font-family: Arial, Helvetica, sans-serif;
@@ -9,7 +10,7 @@ header nav ul a {
 }
 
 header nav ul a:not(.active) {
-	@apply text-zinc-500 hover:text-zinc-800;
+	@apply text-zinc-500 hover:text-zinc-700;
 }
 
 header nav ul > a.active {
