feat: implemented authentication with Google Account; secured dangerous routes; refactored visibility and accessibility to actions with issues

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,11 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 }
 
+header nav,
+main {
+	@apply container mx-auto px-5;
+}
+
 header nav ul a {
 	@apply transition;
 }
